// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GraphElements getEventElements takes a given event and returns the ReactFlow elements with multiple services & long names 1`] = `
[
  {
    "data": {
      "label": "My Event",
      "link": "/docs/events/My Event",
      "maxWidth": 150,
      "renderInColumn": 2,
      "width": 150,
    },
    "id": "ev-My_Event",
    "position": {
      "x": 0,
      "y": 0,
    },
    "style": {
      "border": "2px solid #2563eb",
      "fontSize": "auto",
      "width": 150,
    },
  },
]
`;

exports[`GraphElements getEventElements takes a given event and returns the ReactFlow elements with relations between the event and its consumers and producers 1`] = `
[
  {
    "data": {
      "label": "My Event",
      "link": "/docs/events/My Event",
      "maxWidth": 150,
      "renderInColumn": 2,
      "width": 150,
    },
    "id": "ev-My_Event",
    "position": {
      "x": 0,
      "y": 0,
    },
    "style": {
      "border": "2px solid #2563eb",
      "fontSize": "auto",
      "width": 150,
    },
  },
]
`;

exports[`GraphElements getServiceElements takes a given Service and returns the ReactFlow elements with multiple events & long names 1`] = `
[
  {
    "data": {
      "label": "very very very very very very very very very very very very long name event 5",
      "link": "/docs/events/very very very very very very very very very very very very long name event 5",
      "maxWidth": 616,
      "renderInColumn": 1,
      "width": 616,
    },
    "id": "sub-very_very_very_very_very_very_very_very_very_very_very_very_long_name_event_5",
    "position": {
      "x": 0,
      "y": 0,
    },
    "style": {
      "border": "2px solid #75d7b6",
      "fontSize": "auto",
      "width": 616,
    },
    "type": "input",
  },
  {
    "data": {
      "label": "My Event 6",
      "link": "/docs/events/My Event 6",
      "maxWidth": -316,
      "renderInColumn": 1,
      "width": 150,
    },
    "id": "sub-My_Event_6",
    "position": {
      "x": 0,
      "y": 0,
    },
    "style": {
      "border": "2px solid #75d7b6",
      "fontSize": "auto",
      "width": 150,
    },
    "type": "input",
  },
  {
    "data": {
      "label": "My Event 7",
      "link": "/docs/events/My Event 7",
      "maxWidth": -316,
      "renderInColumn": 1,
      "width": 150,
    },
    "id": "sub-My_Event_7",
    "position": {
      "x": 0,
      "y": 0,
    },
    "style": {
      "border": "2px solid #75d7b6",
      "fontSize": "auto",
      "width": 150,
    },
    "type": "input",
  },
  {
    "data": {
      "label": "My Event 8",
      "link": "/docs/events/My Event 8",
      "maxWidth": -316,
      "renderInColumn": 1,
      "width": 150,
    },
    "id": "sub-My_Event_8",
    "position": {
      "x": 0,
      "y": 0,
    },
    "style": {
      "border": "2px solid #75d7b6",
      "fontSize": "auto",
      "width": 150,
    },
    "type": "input",
  },
  {
    "data": {
      "label": "My Event 9",
      "link": "/docs/events/My Event 9",
      "maxWidth": -316,
      "renderInColumn": 1,
      "width": 150,
    },
    "id": "sub-My_Event_9",
    "position": {
      "x": 0,
      "y": 0,
    },
    "style": {
      "border": "2px solid #75d7b6",
      "fontSize": "auto",
      "width": 150,
    },
    "type": "input",
  },
  {
    "data": {
      "label": "My Service",
      "link": "/docs/services/My Service",
      "maxWidth": 150,
      "renderInColumn": 2,
      "width": 150,
    },
    "id": "ser-My_Service",
    "position": {
      "x": 0,
      "y": 0,
    },
    "style": {
      "border": "2px solid #2563eb",
      "fontSize": "auto",
      "width": 150,
    },
  },
  {
    "data": {
      "label": "My Event",
      "link": "/docs/events/My Event",
      "maxWidth": 616,
      "renderInColumn": 3,
      "width": 150,
    },
    "id": "pub-My_Event",
    "position": {
      "x": 0,
      "y": 0,
    },
    "style": {
      "border": "2px solid #818cf8",
      "fontSize": "auto",
      "width": 150,
    },
    "type": "output",
  },
  {
    "data": {
      "label": "My Event 2",
      "link": "/docs/events/My Event 2",
      "maxWidth": 616,
      "renderInColumn": 3,
      "width": 150,
    },
    "id": "pub-My_Event_2",
    "position": {
      "x": 0,
      "y": 0,
    },
    "style": {
      "border": "2px solid #818cf8",
      "fontSize": "auto",
      "width": 150,
    },
    "type": "output",
  },
  {
    "data": {
      "label": "My Event 3",
      "link": "/docs/events/My Event 3",
      "maxWidth": 616,
      "renderInColumn": 3,
      "width": 150,
    },
    "id": "pub-My_Event_3",
    "position": {
      "x": 0,
      "y": 0,
    },
    "style": {
      "border": "2px solid #818cf8",
      "fontSize": "auto",
      "width": 150,
    },
    "type": "output",
  },
  {
    "data": {
      "label": "very.very.very.very.very.very.very.very.very.very.very.very.long.name.event.4",
      "link": "/docs/events/very.very.very.very.very.very.very.very.very.very.very.very.long.name.event.4",
      "maxWidth": 616,
      "renderInColumn": 3,
      "width": 616,
    },
    "id": "pub-very.very.very.very.very.very.very.very.very.very.very.very.long.name.event.4",
    "position": {
      "x": 0,
      "y": 0,
    },
    "style": {
      "border": "2px solid #818cf8",
      "fontSize": "auto",
      "width": 616,
    },
    "type": "output",
  },
  {
    "animated": true,
    "arrowHeadType": "arrowclosed",
    "id": "ecp-My_Event",
    "label": "",
    "labelBgBorderRadius": 4,
    "labelBgPadding": [
      8,
      4,
    ],
    "labelBgStyle": {
      "color": "#fff",
      "fill": "white",
      "fillOpacity": 0.5,
    },
    "labelStyle": {
      "fontSize": "6px",
    },
    "source": "ser-My_Service",
    "target": "pub-My_Event",
    "type": "smoothstep",
  },
  {
    "animated": true,
    "arrowHeadType": "arrowclosed",
    "id": "ecp-My_Event_2",
    "label": "",
    "labelBgBorderRadius": 4,
    "labelBgPadding": [
      8,
      4,
    ],
    "labelBgStyle": {
      "color": "#fff",
      "fill": "white",
      "fillOpacity": 0.5,
    },
    "labelStyle": {
      "fontSize": "6px",
    },
    "source": "ser-My_Service",
    "target": "pub-My_Event_2",
    "type": "smoothstep",
  },
  {
    "animated": true,
    "arrowHeadType": "arrowclosed",
    "id": "ecp-My_Event_3",
    "label": "",
    "labelBgBorderRadius": 4,
    "labelBgPadding": [
      8,
      4,
    ],
    "labelBgStyle": {
      "color": "#fff",
      "fill": "white",
      "fillOpacity": 0.5,
    },
    "labelStyle": {
      "fontSize": "6px",
    },
    "source": "ser-My_Service",
    "target": "pub-My_Event_3",
    "type": "smoothstep",
  },
  {
    "animated": true,
    "arrowHeadType": "arrowclosed",
    "id": "ecp-very.very.very.very.very.very.very.very.very.very.very.very.long.name.event.4",
    "label": "",
    "labelBgBorderRadius": 4,
    "labelBgPadding": [
      8,
      4,
    ],
    "labelBgStyle": {
      "color": "#fff",
      "fill": "white",
      "fillOpacity": 0.5,
    },
    "labelStyle": {
      "fontSize": "6px",
    },
    "source": "ser-My_Service",
    "target": "pub-very.very.very.very.very.very.very.very.very.very.very.very.long.name.event.4",
    "type": "smoothstep",
  },
  {
    "animated": true,
    "arrowHeadType": "arrowclosed",
    "id": "esc-very_very_very_very_very_very_very_very_very_very_very_very_long_name_event_5",
    "label": "",
    "labelBgBorderRadius": 4,
    "labelBgPadding": [
      8,
      4,
    ],
    "labelBgStyle": {
      "color": "#fff",
      "fill": "white",
      "fillOpacity": 0.5,
    },
    "labelStyle": {
      "fontSize": "6px",
    },
    "source": "sub-very_very_very_very_very_very_very_very_very_very_very_very_long_name_event_5",
    "target": "ser-My_Service",
    "type": "smoothstep",
  },
  {
    "animated": true,
    "arrowHeadType": "arrowclosed",
    "id": "esc-My_Event_6",
    "label": "",
    "labelBgBorderRadius": 4,
    "labelBgPadding": [
      8,
      4,
    ],
    "labelBgStyle": {
      "color": "#fff",
      "fill": "white",
      "fillOpacity": 0.5,
    },
    "labelStyle": {
      "fontSize": "6px",
    },
    "source": "sub-My_Event_6",
    "target": "ser-My_Service",
    "type": "smoothstep",
  },
  {
    "animated": true,
    "arrowHeadType": "arrowclosed",
    "id": "esc-My_Event_7",
    "label": "",
    "labelBgBorderRadius": 4,
    "labelBgPadding": [
      8,
      4,
    ],
    "labelBgStyle": {
      "color": "#fff",
      "fill": "white",
      "fillOpacity": 0.5,
    },
    "labelStyle": {
      "fontSize": "6px",
    },
    "source": "sub-My_Event_7",
    "target": "ser-My_Service",
    "type": "smoothstep",
  },
  {
    "animated": true,
    "arrowHeadType": "arrowclosed",
    "id": "esc-My_Event_8",
    "label": "",
    "labelBgBorderRadius": 4,
    "labelBgPadding": [
      8,
      4,
    ],
    "labelBgStyle": {
      "color": "#fff",
      "fill": "white",
      "fillOpacity": 0.5,
    },
    "labelStyle": {
      "fontSize": "6px",
    },
    "source": "sub-My_Event_8",
    "target": "ser-My_Service",
    "type": "smoothstep",
  },
  {
    "animated": true,
    "arrowHeadType": "arrowclosed",
    "id": "esc-My_Event_9",
    "label": "",
    "labelBgBorderRadius": 4,
    "labelBgPadding": [
      8,
      4,
    ],
    "labelBgStyle": {
      "color": "#fff",
      "fill": "white",
      "fillOpacity": 0.5,
    },
    "labelStyle": {
      "fontSize": "6px",
    },
    "source": "sub-My_Event_9",
    "target": "ser-My_Service",
    "type": "smoothstep",
  },
]
`;

exports[`GraphElements getServiceElements takes a given Service and returns the ReactFlow elements with relations the events it publishes and consumes 1`] = `
[
  {
    "data": {
      "label": "My Event 2",
      "link": "/docs/events/My Event 2",
      "maxWidth": 150,
      "renderInColumn": 1,
      "width": 150,
    },
    "id": "sub-My_Event_2",
    "position": {
      "x": 0,
      "y": 0,
    },
    "style": {
      "border": "2px solid #75d7b6",
      "fontSize": "auto",
      "width": 150,
    },
    "type": "input",
  },
  {
    "data": {
      "label": "My Service",
      "link": "/docs/services/My Service",
      "maxWidth": 150,
      "renderInColumn": 2,
      "width": 150,
    },
    "id": "ser-My_Service",
    "position": {
      "x": 0,
      "y": 0,
    },
    "style": {
      "border": "2px solid #2563eb",
      "fontSize": "auto",
      "width": 150,
    },
  },
  {
    "data": {
      "label": "My Event",
      "link": "/docs/events/My Event",
      "maxWidth": 150,
      "renderInColumn": 3,
      "width": 150,
    },
    "id": "pub-My_Event",
    "position": {
      "x": 0,
      "y": 0,
    },
    "style": {
      "border": "2px solid #818cf8",
      "fontSize": "auto",
      "width": 150,
    },
    "type": "output",
  },
  {
    "animated": true,
    "arrowHeadType": "arrowclosed",
    "id": "ecp-My_Event",
    "label": "",
    "labelBgBorderRadius": 4,
    "labelBgPadding": [
      8,
      4,
    ],
    "labelBgStyle": {
      "color": "#fff",
      "fill": "white",
      "fillOpacity": 0.5,
    },
    "labelStyle": {
      "fontSize": "6px",
    },
    "source": "ser-My_Service",
    "target": "pub-My_Event",
    "type": "smoothstep",
  },
  {
    "animated": true,
    "arrowHeadType": "arrowclosed",
    "id": "esc-My_Event_2",
    "label": "",
    "labelBgBorderRadius": 4,
    "labelBgPadding": [
      8,
      4,
    ],
    "labelBgStyle": {
      "color": "#fff",
      "fill": "white",
      "fillOpacity": 0.5,
    },
    "labelStyle": {
      "fontSize": "6px",
    },
    "source": "sub-My_Event_2",
    "target": "ser-My_Service",
    "type": "smoothstep",
  },
]
`;
